Freezer class implemented

--- a/PPL.ipynb
+++ b/PPL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "id": "7abd1f11",
    "metadata": {},
    "outputs": [
@@ -118,18 +118,28 @@
       "Printing sorted freezer\n",
       "(1, (0, 0), '[1:3]', 1)\n",
       "(12, (0, 0), '[4:5]', 1)\n",
-      "(3, (0, 0), '[6:8]', 1)\n",
       "(13, (0, 0), '[5:9]', 1)\n",
-      "(10, (0, 0), '[2:5]', 2)\n",
-      "(2, (0, 0), '[3:6]', 2)\n",
-      "(6, (0, 0), '[7:9]', 2)\n",
+      "(3, (0, 0), '[6:8]', 1)\n",
       "(7, (0, 11), '[0:1]', 2)\n",
       "(11, (1, 0), '[0:2]', 2)\n",
       "(8, (1, 11), '[1:2]', 2)\n",
+      "(10, (0, 0), '[2:5]', 2)\n",
+      "(2, (0, 0), '[3:6]', 2)\n",
       "(5, (3, 0), '[6:7]', 2)\n",
+      "(6, (0, 0), '[7:9]', 2)\n",
       "(4, (2, 13), '[2:6]', 3)\n",
       "(9, (3, 13), '[5:7]', 3)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nClass freezernode:\\n    def __init__(self,node,uid,rbt):\\n        self.data = node.data\\n        self.uid = uid\\n        self.children = (self.get_node_val(node.left), self.get_node_val(node.right))\\n        self.lifespan = (node.birth,node.death)\\n        self.black_depth = rbt.black_depth(node,0)\\n'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -152,7 +162,7 @@
     "        self.death = None\n",
     "\n",
     "class FreezerNode():\n",
-    "    def get_node_val(node):\n",
+    "    def get_node_val(self,node):\n",
     "        val = \"Null\"\n",
     "        if node:\n",
     "            val = node.data\n",
@@ -161,16 +171,19 @@
     "    def __init__(self,node,uid,rbt):\n",
     "        self.data = node.data\n",
     "        self.uid = uid\n",
-    "        self.children = (get_node_val(node.left),get_node_val(node.right))\n",
+    "        self.children = (self.get_node_val(node.left), self.get_node_val(node.right))\n",
     "        self.lifespan = (node.birth,node.death)\n",
     "        self.black_depth = rbt.black_depth(node,0)\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return str((node.data,node.children,f\"[{node.lifespan[0]}:{node.lifespan[1]}]\",node.black_depth))\n",
     "\n",
     "class Freezer(): #this should be a rbt, but this is just a proof of concept\n",
     "    def __init__(self,rbt):\n",
     "        self.freezer = []\n",
     "        self.rbt = rbt\n",
     "    \n",
-    "    def __add__(self,node):\n",
+    "    def append(self,node):\n",
     "        uid = \"\"\n",
     "        try:\n",
     "            max_similar_node_length = max([ len(node1.uid) for node1 in self.freezer if node1.data == node.data ])\n",
@@ -181,8 +194,11 @@
     "        self.freezer.append(frozen_node)\n",
     "        \n",
     "    def __str__(self):\n",
-    "        res = [ str((node.data,node.children,f\"[{node.lifespan[0]}:{node.lifespan[1]}]\",node.black_depth)) for node in self.freezer ]\n",
+    "        res = [ str(node) for node in self.freezer ]\n",
     "        return \"\\n\".join([\"Freezer:\"] + res)\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        return self.freezer.__iter__()\n",
     "\n",
     "\n",
     "# class RedBlackTree implements the operations in Red Black Tree\n",
@@ -193,7 +209,7 @@
     "        self.TNULL.left = None\n",
     "        self.TNULL.right = None\n",
     "        self.root = self.TNULL\n",
-    "        self.freezer = []\n",
+    "        self.freezer = Freezer(self)\n",
     "\n",
     "    def __pre_order_helper(self, node):\n",
     "        if node != TNULL:\n",
@@ -558,10 +574,11 @@
     "        right = self.get_node_val(node_to_delete.right)\n",
     "        print(data,left,right,self.black_depth(node_to_delete,0))\n",
     "        self.pretty_print()\n",
-    "        self.freezer.append((node_to_delete.data,\\\n",
-    "                             (left,right),\\\n",
-    "                             f\"[{node_to_delete.birth}:{node_to_delete.death}]\",\\\n",
-    "                             self.black_depth(node_to_delete,0)))\n",
+    "        self.freezer.append(node_to_delete)\n",
+    "        #self.freezer.append((node_to_delete.data,\\\n",
+    "        #                     (left,right),\\\n",
+    "        #                     f\"[{node_to_delete.birth}:{node_to_delete.death}]\",\\\n",
+    "        #                     self.black_depth(node_to_delete,0)))\n",
     "        self.__delete_node_helper(self.root, data)\n",
     "\n",
     "    # print the tree structure on the screen\n",
@@ -631,9 +648,9 @@
     "    for node in bst.freezer:\n",
     "        print(node)\n",
     "    print(\"\\n\\nPrinting sorted freezer\") #sort by black_depth then by colour (red before black)\n",
-    "    freeze = sorted(bst.freezer,key = lambda x: (x[3],x[1][0],x[1][1]))\n",
+    "    freeze = sorted(bst.freezer,key = lambda x: (x.black_depth,x.lifespan))\n",
     "    for node in freeze:\n",
-    "        print(node)"
+    "        print(node)\n"
    ]
   },
   {
