--- a/PPL.ipynb
+++ b/PPL.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "7abd1f11",
    "metadata": {
     "scrolled": false
    },
@@ -625,11 +624,41 @@
     "\n",
     "small_test()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A():\n",
+    "    def __init__(self):\n",
+    "        self.note = \"a\"\n",
+    "        \n",
+    "class B():\n",
+    "    def __init__(self):\n",
+    "        self.note = \"b\"\n",
+    "        \n",
+    "class C():\n",
+    "    def __init__(self,node):\n",
+    "        self.note = node().note\n",
+    "        \n",
+    "c = C(B)\n",
+    "print(c.note)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -643,7 +672,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
